fix(app-shell): Navbar's z-index in Safari (#3177)
* fix: navbars z-index in safari

* fix: alternative approach

* chore: add comments

* chore: empty

* Alternative to fix `NavBar` unexpected behaviour in Safari (#3182)

* fix(application-shell): refactor navbar styles to fix unexpected safari behaviour

* revert: styling in js

---------


* refactor: use css vars

refactor: comment

---------

--- a/packages/application-shell/src/components/navbar/navbar.mod.css
+++ b/packages/application-shell/src/components/navbar/navbar.mod.css
@@ -13,6 +13,10 @@
   --width-left-navigation: 64px;
   --width-left-navigation-when-expanded: 245px;
   --width-left-navigation-sublist: 205px;
+
+  /* Active list item with icon text */
+  --left-list-item-icon-text-active: 46px;
+  --width-list-item-icon-text-active: 166px;
 }
 
 /* Left Nav */
@@ -262,7 +266,6 @@
   background-color: var(--background-color-for-navbar);
   top: 0;
   left: 64px;
-  z-index: -1;
   list-style: none;
   opacity: 0.01;
   display: none;
@@ -317,10 +320,6 @@
 }
 
 .list-item.item__active .item-icon-text {
-  width: calc(
-    var(--width-left-navigation-sublist) + var(--width-left-navigation) -
-      var(--spacing-m) * 2
-  );
   justify-content: flex-start;
 }
 .list-item .icon-container {
@@ -353,6 +352,11 @@
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
+  position: absolute;
+  /* `left` and `width` required for displaying focus indicator properly */
+  left: var(--left-list-item-icon-text-active);
+  width: var(--width-list-item-icon-text-active);
+  z-index: 1;
 }
 
 :global(.body__menu-open) .list-item.item__active .item-icon-text .title {
@@ -408,9 +412,9 @@
 .scrollable-menu {
   flex: 1 1 0;
   padding-bottom: var(--faded-height);
-  /* 
+  /*
     FIXME: Make the navbar scrollable in collapsed state.
-    NOTE: do not use `overflow-x: hidden; overflow-y: auto;` as this prevents submenus from showing up on hover 
+    NOTE: do not use `overflow-x: hidden; overflow-y: auto;` as this prevents submenus from showing up on hover
   */
 }
 
